fixed height difference in post items. as well as fixed spacing issue with the footer

--- a/client/src/components/Layout/Footer/footer.css
+++ b/client/src/components/Layout/Footer/footer.css
@@ -1,7 +1,7 @@
 /* footer root component */
 
 #footerStyles_root {
-    margin-top: 8rem;
+    margin-top: 14rem;
 }
 
 /* inner footer wrap surrounding the images and logo */
