--- a/client/src/components/Post/PostItem/postItem.css
+++ b/client/src/components/Post/PostItem/postItem.css
@@ -24,6 +24,8 @@
     margin-top: -2rem;
     width: 100%;
     max-width: 22rem;
+    height: 18rem;
+    position: relative;
 }
 
 /* cover image */
@@ -31,8 +33,10 @@
 .postItemStyles_coverImg img {
     display: block;
     width: 100%;
+    height: 100%;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
     border-radius: 3px;
+    position: absolute;
 }
 
 /* quill p tag surrounding the img element */
